--- a/cv.Rmd
+++ b/cv.Rmd
@@ -56,7 +56,7 @@ urlcolor: blue
 
 ## Michigan State University
 
-**Ph.D.**, Educational Psychology & Educational Technology \hfill Expected 2020
+**Ph.D.**, Educational Psychology & Educational Technology \hfill Expected Spring 2021
 
   * \* Dissertation: *Into the edu-verse: New teachers seeking induction support on social media*
   * \* Committee: Matthew Koehler, Christine Greenhow, Ralph Putnam, Gail Richmond
