added unfunded fellowships

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -221,37 +221,54 @@ Greenhalgh, S. P., **Staudt Willet**, K. B., Rosenberg, J. M., & Koehler, M. J. 
 
 # Funding 
 
-## TOTAL: $26,675
+## Grants and Fellowships (Funded): $26,675
 
-**Clifford E. Erickson Memorial Fund Scholarship: $5,500** \hfill 2020  
-Michigan State University, College of Education \hfill East Lansing MI
+**Clifford E. Erickson Memorial Fund Scholarship: $5,500 - Funded** \hfill 2020  
+Michigan State University, College of Education
 
-**Student Research Conference Travel Fellowship: $600** \hfill 2020  
-Michigan State University, Dept. of Counseling, Educational Psychology, & Special Ed. \hfill East Lansing MI
+**Student Research Conference Travel Fellowship: $600 - Funded** \hfill 2020  
+Michigan State University, Dept. of Counseling, Educational Psychology, & Special Education
 
-**Research Practicum/Dissertation Development Fellowship: $1,300** \hfill 2020  
-Michigan State University, College of Education \hfill East Lansing MI
+**Research Practicum/Dissertation Development Fellowship: $1,300 - Funded** \hfill 2020  
+Michigan State University, College of Education
 
-**Disciplinary Leadership Award: $2,000** \hfill 2019  
-Michigan State University, Council of Graduate Students \hfill East Lansing MI
+**Disciplinary Leadership Award: $2,000 - Funded** \hfill 2019  
+Michigan State University, Council of Graduate Students
 
-**Research Practicum/Dissertation Development Fellowship: $2,000** \hfill 2019  
-Michigan State University, College of Education \hfill East Lansing MI
+**Research Practicum/Dissertation Development Fellowship: $2,000 - Funded** \hfill 2019  
+Michigan State University, College of Education
 
-**Student Research Conference Travel Fellowship: $1,050** \hfill 2019  
-Michigan State University, Dept. of Counseling, Educational Psychology, & Special Ed. \hfill East Lansing MI
+**Student Research Conference Travel Fellowship: $1,050 - Funded** \hfill 2019  
+Michigan State University, Dept. of Counseling, Educational Psychology, & Special Education
 
-**Summer Research Renewable Fellowship: $12,000** \hfill 2018-2019  
-Michigan State University, College of Education \hfill East Lansing MI
+**Summer Research Renewable Fellowship: $12,000 - Funded** \hfill 2018-2019  
+Michigan State University, College of Education
 
-**Professional Development Award: $500** \hfill 2018  
-Michigan State University, Council of Graduate Students \hfill East Lansing MI
+**Professional Development Award: $500 - Funded** \hfill 2018  
+Michigan State University, Council of Graduate Students
 
-**Student Research Conference Travel Fellowship: $795** \hfill 2018  
-Michigan State University, Dept. of Counseling, Educational Psychology, & Special Ed. \hfill East Lansing MI
+**Student Research Conference Travel Fellowship: $795 - Funded** \hfill 2018  
+Michigan State University, Dept. of Counseling, Educational Psychology, & Special Education
 
-**Student Research Conference Travel Fellowship: $930** \hfill 2017  
-Michigan State University, Dept. of Counseling, Educational Psychology, & Special Ed., \hfill East Lansing MI
+**Student Research Conference Travel Fellowship: $930 - Funded** \hfill 2017  
+Michigan State University, Dept. of Counseling, Educational Psychology, & Special Education
+
+## Grants and Fellowships (Not Funded)
+
+**NAEd/Spencer Dissertation Fellowship: Not Funded** \hfill 2020  
+National Academy of Education + Spencer Foundation
+
+**Dickson Award for Research on Innovative Technologies in Learning: Not Funded** \hfill 2019  
+Michigan State University, College of Education
+
+**Endowed Scholarships: Not Funded** \hfill 2019  
+Michigan State University, College of Education
+
+**Endowed Scholarships: Not Funded** \hfill 2018  
+Michigan State University, College of Education
+
+**Disciplinary Leadership Award: Not Funded** \hfill 2017  
+Michigan State University, Council of Graduate Students
 
 ---
 
