--- a/cv.Rmd
+++ b/cv.Rmd
@@ -101,7 +101,7 @@ Society for Information Technology & Teacher Education (SITE) International Conf
 
 Rosenberg, J. M., & **Staudt Willet**, K. B. (in press). Balancing privacy and open science in the context of COVID-19: A response to Ifenthaler & Schumacher (2016). *Educational Technology Research and Development*. https://doi.org/10.1007/s11423-020-09860-8
 
-Greenhow, C., Lewin, C., & **Staudt Willet**, K. B. (in press). The educational response to COVID-19 across two countries: A critical examination of initial digital pedagogy adoption. *Technology, Pedagogy and Education*.
+Greenhow, C., Lewin, C., & **Staudt Willet**, K. B. (in press). The educational response to COVID-19 across two countries: A critical examination of initial digital pedagogy adoption. *Technology, Pedagogy and Education*. https://doi.org/10.1080/1475939X.2020.1866654
 
 Greenhalgh, S. P., Rosenberg, J. M., **Staudt Willet**, K. B., Koehler, M. J., & Akcaoglu, M. (2020). Identifying multiple learning spaces within a single teacher-focused Twitter hashtag. *Computers and Education*. https://doi.org/10.1016/j.compedu.2020.103809
 
