--- a/cv.Rmd
+++ b/cv.Rmd
@@ -352,9 +352,11 @@ Romero-Hall, E., Arslan-Ari, I., Gentry, W., Greenhalgh, S., Jung, Y. J., Stefan
 
 # Service
 
-## Journal Article Reviews (5)
+## Journal Article Reviews (7)
 
 * \* *American Journal of Education* (2) \hfill 2019-2020
+* \* *Computers and Education* (1) \hfill 2021
+* \* *Journal of Information Technology and Politics* (2) \hfill 2020
 * \* *Internet and Higher Education* (2) \hfill 2019
 * \* *Learning, Media and Technology*, with Dr. Christine Greenhow, faculty reviewer \hfill 2016
 
