added article reviews

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -356,9 +356,9 @@ Romero-Hall, E., Arslan-Ari, I., Gentry, W., Greenhalgh, S., Jung, Y. J., Stefan
 
 * \* *American Journal of Education* (2) \hfill 2019-2020
 * \* *Computers and Education* (1) \hfill 2021
-* \* *Journal of Information Technology and Politics* (2) \hfill 2020
+* \* *Journal of Information Technology and Politics* (1) \hfill 2020
 * \* *Internet and Higher Education* (2) \hfill 2019
-* \* *Learning, Media and Technology*, with Dr. Christine Greenhow, faculty reviewer \hfill 2016
+* \* *Learning, Media and Technology* (1), with Dr. Christine Greenhow, faculty reviewer \hfill 2016
 
 ## Service in Professional Organizations
 
